--- a/StudyMates/Storyboards/Home.storyboard
+++ b/StudyMates/Storyboards/Home.storyboard
@@ -81,6 +81,14 @@
             </objects>
             <point key="canvasLocation" x="1792.8" y="128.57142857142858"/>
         </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="huU-3n-y33">
+            <objects>
+                <viewControllerPlaceholder id="EIs-qN-YlP" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="geA-dr-GLC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2333" y="28"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="dcS-k5-YT8">
             <objects>
