--- a/StudyMates/Storyboards/SignUp.storyboard
+++ b/StudyMates/Storyboards/SignUp.storyboard
@@ -95,5 +95,13 @@
             </objects>
             <point key="canvasLocation" x="-110" y="714"/>
         </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="zof-CE-Ch7">
+            <objects>
+                <viewControllerPlaceholder id="2gz-Q4-mj5" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NZm-7z-beb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="638" y="702"/>
+        </scene>
     </scenes>
 </document>
