--- a/StudyMates/Storyboards/Login.storyboard
+++ b/StudyMates/Storyboards/Login.storyboard
@@ -72,5 +72,13 @@
             </objects>
             <point key="canvasLocation" x="-258.39999999999998" y="129.31034482758622"/>
         </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="YAL-Qz-9Xh">
+            <objects>
+                <viewControllerPlaceholder id="8Ng-rv-e4V" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Hs-le-ObV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="240" y="117"/>
+        </scene>
     </scenes>
 </document>
